<resources>
    <string name="app_name">BoGoods</string>
    <string name="title_activity_authentication">Authentication</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string-array name="gender">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
    <string-array name="store">
        <item>List Barang</item>
        <item>List Reseller</item>
        <item>Edit Store</item>
    </string-array>
    <string-array name="pembayaran">
        <item>Bayar di Tempat</item>
        <item>Transfer BCA</item>
    </string-array>
    <string-array name="pengiriman">
        <item>Jasa Paket</item>
        <item>Diantar Penjual</item>
    </string-array>
    <string name="title_activity_dashboard_seller">BoGoods</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_store">My Store</string>
    <string name="menu_your_order">Your Order</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
